# SIH-Main-Hackathon

./: pyproject.toml  test.py
deploy/: .bumpversion.cfg  Dockerfile  deploy.sh
deploy/SQL/: flyway.toml
deploy/SQL/migrations/: V1.4__create_game_table.sql
src/: main.py
src/auth/: user_auth.py
src/client/: firebase.py  ingestion.py  nyayaAI.py  requirements.txt
src/client/model/: __init__.py  config.py  global_model.py  ingest.py  ingestion.py  qa.py  retriever.py
src/db/: base.py  category.py  category_info.py  game.py  message.py
src/router/: game.py  message.py  user.py
src/schema/: game.py  message.py  user.py
src/service/: game.py  message.py  user.py
