[tool.poetry]
name = "sih-main-hackathon"
version = "0.1.0"
description = ""
authors = ["ATISHAY JAIN <atishayj.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
fastapi = "^0.114.0"
sqlalchemy = "^2.0.34"
firebase-admin = "^6.5.0"
pydantic = "^2.9.0"
uvicorn = "^0.30.6"
psycopg2-binary = "^2.9.9"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
bumpversion = "^0.6.0"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
